<resources>
    <string name="app_name">Evento</string>
    <string name="check_in_title">Para realizar check-in informe:</string>
    <string name="name">Informe seu nome</string>
    <string name="email">Informe seu email</string>
    <string name="default_tiltle">Aplicativo de eventos de anuncie aqui</string>
    <string name="exchange">R$:</string>
    <string name="default_price">00.00</string>
    <string name="default_data">30/10/2022 9:50 </string>
    <string name="error_load_data">Error to load data</string>
    <string name="details">Detalhes</string>
    <string name="checkin">Check-in</string>
    <string name="checkin_response_success">Check-in realizado!</string>
    <string name="checkin_response_error">Erro ao realizar Check-in!</string>
    <string name="checkin_empty">Preencha os campos para realizar Check-in!</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>