<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_data"
        android:textAllCaps="true"
        android:textSize="@dimen/tile_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_toStartOf="@+id/price"
        android:text="@string/exchange"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/default_price"
        android:textColor="@color/read_price"
        android:textSize="@dimen/tile_text_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/price"
        android:layout_marginTop="@dimen/default_margin"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_broken_24" />

    <TextView
        android:id="@+id/tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/default_tiltle"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textSize="@dimen/tile_text_size" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tile"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/example_text"
        android:textAlignment="textStart"
        android:textSize="@dimen/tile_text_size" />

</RelativeLayout>

